# bmspy

./: Cargo.toml  README.md
migrations/: 0__create_products_table.sql  0__create_tracked_products_table.sql  V0__create_tracked_products_table.sql
src/: client.rs  main.rs  migrations.rs
src/product/: back_mareket_uuid_extractor.rs  from_url.rs  mod.rs  snapshot.rs  title_fetcher.rs  track.rs  tracked.rs
src/snapshot/: mod.rs
