[package]
name = "bmspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
